# echob

./: .env.docker.example  .env.example  .env.production.example  .gitattributes  .gitignore  DEPLOY.md  PROJECT_NOTES.md  README.md  docker-compose.prod.yml  docker-compose.yml
services/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/api/app/: main.py
services/api/app/core/: config.py  crypto.py  database.py  dependencies.py  logging.py
services/api/app/prompts/: PROMPTS.md  blog_topic_prompt.md  content_topic_prompt.md  echo_couple_prompt.md  echo_couple_report_prompt.md  echo_professional_prompt.md  echo_professional_report_prompt.md  echo_roleplay_prompt.md  echo_system_prompt.md  hypothesis_attachment_prompt.md  hypothesis_clusterb_prompt.md  hypothesis_dynamics_prompt.md  hypothesis_own_role_prompt.md  hypothesis_summary_prompt.md  hypothesis_trauma_prompt.md  pattern_hypotheses_prompt.md  person_profile_echo_prompt.md  person_profile_summary_prompt.md  pro_report_template_assist_prompt.md  profile_echo_prompt.md  report_generation_prompt.md  review_generation_prompt.md  safety_check_prompt.md  safety_classify_prompt.md  scale_calculation_prompt.md  scene_capture_prompt.md  scene_extraction_prompt.md  topic_guilt_prompt.md  topic_person_prompt.md  topic_responsibility_prompt.md  topic_self_prompt.md  topic_summary_prompt.md
services/api/app/schemas/: __init__.py  case.py  client_invite.py  collab.py  common.py  contact.py  echo.py  institute.py  person_profile.py  professional.py  profile.py  pseudonymous.py  report.py  scale.py  scene.py  student.py  subscription.py  user.py  waitlist.py
services/api/app/services/: account_service.py  billing_service.py  case_generation_service.py  client_invite_service.py  collab_service.py  contact_service.py  couple_service.py  demo_service.py  echo_modes.py  echo_service.py  hypothesis_service.py  invite_service.py  notify_service.py  org_service.py  person_profile_service.py  pro_billing_service.py  pro_note_templates.py  pro_report_templates.py  profile_service.py  pseudonymous_service.py  review_service.py  safety_service.py  seat_service.py  sharing_service.py  student_invite_service.py  (+3 more)
services/worker/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/worker/app/: main.py
(+472 files in other folders)
