[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "echob-api"
version = "0.1.0"
description = "EchoB API – Python/FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "asyncpg>=0.29",
    "supabase>=2.4",
    "openai>=1.30",
    # "python-jose[cryptography]>=3.3",
    # Ab Phase 3:
    # "anthropic>=0.25",
    # Ab Phase 4:
    # "weasyprint>=62",
    # "arq>=0.25",
    # "redis>=5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
